[gd_scene load_steps=2 format=2]

[ext_resource path="res://utils/AppearingText.gd" type="Script" id=1]

[node name="AppearingText" type="Node2D"]
script = ExtResource( 1 )

[node name="NextChar" type="Timer" parent="."]
wait_time = 0.05

[node name="ReadAll" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="NextChar" to="." method="_on_NextChar_timeout"]
[connection signal="timeout" from="ReadAll" to="." method="_on_ReadAll_timeout"]
